# numerical

./: .gitignore  BLOCK_PRECOND_PLAN.md  BLOCK_SPARSE_PLAN.md  CHOL_LDLT_PRECOND_PLAN.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LYAPUNOV_PLAN.md  README.md  SCHUR_COMPLEMENT_PLAN.md  SCHUR_PRECOND_PLAN.md
.github/workflows/: release.yml  rust.yml
benches/: bench.rs
examples/leptos-plotly/: Cargo.toml  README.md  index.html  style.css
examples/leptos-plotly/server/: Cargo.toml
examples/leptos-plotly/server/src/: main.rs
examples/leptos-plotly/src/: app.rs  catalog.rs  demo_signal.rs  main.rs  plot_helpers.rs  plotly_support.rs  timing.rs
examples/leptos-plotly/src/examples/: dense_spectral.rs  equilibration.rs  estimation.rs  filter_design.rs  gramians_hsvd.rs  home.rs  identification.rs  linear_solvers.rs  lti.rs  lti_gallery.rs  mod.rs  nonlinear_estimation.rs  pid_design.rs  placeholder.rs  process_model_fit.rs  reduction.rs  savgol_design.rs  sparse_cholesky.rs  synthesis.rs
src/: lib.rs  scalar.rs  twosum.rs
src/control/: balanced.rs  dense_ops.rs  estimator.rs  hsvd.rs  lqg.rs  lqr.rs  lyapunov.rs  mod.rs  nonlinear_estimator.rs  pid.rs  pid_design.rs  riccati.rs  stein.rs
src/control/estimation/: dense.rs  ekf.rs  linear.rs  mod.rs  nonlinear.rs  nonlinear_core.rs  ukf.rs
src/control/identification/: era.rs  mod.rs  okid.rs
src/control/lti/: analysis.rs  delta_sos.rs  error.rs  fir.rs  loop_analysis.rs  mod.rs  plot_data.rs  process_models.rs  response.rs  response_metrics.rs  root_locus.rs  sim.rs  sos.rs  transfer_function.rs  util.rs  zpk.rs
src/control/lti/filter_design/: digital.rs  error.rs  mod.rs  order.rs  prototype.rs  spec.rs  transform.rs
src/control/lti/state_space/: convert.rs  domain.rs  error.rs  mod.rs  sparse.rs
src/control/matrix_equations/: lyapunov.rs  mod.rs  riccati.rs  stein.rs
src/control/realization/: error.rs  hankel.rs  markov.rs  mod.rs
src/control/reduction/: balanced.rs  hsvd.rs  mod.rs
src/control/state_space/: convert.rs  domain.rs  error.rs  mod.rs  sparse.rs
src/control/synthesis/: lqg.rs  lqr.rs  mod.rs  pid.rs  pid_design.rs  pole_placement.rs
src/decomp/: eigen.rs  mod.rs  operator.rs  svd.rs
src/embedded/: error.rs  math.rs  mod.rs
src/embedded/alloc/: matrix.rs  mod.rs
src/embedded/alloc/estimation/: core.rs  dense.rs  ekf.rs  mod.rs  ukf.rs
src/embedded/fixed/: linalg.rs  mod.rs
src/embedded/fixed/estimation/: kalman.rs  mod.rs
src/embedded/fixed/lti/: delta_sos.rs  fir.rs  fractional_delay.rs  mod.rs  pid.rs  state_space.rs
src/sparse/: bicgstab.rs  cholesky.rs  col.rs  compensated.rs  equilibration.rs  field.rs  lu.rs  matvec.rs  mod.rs  precond.rs  schur.rs
src/sparse/precond/: block.rs  diagonal.rs  mod.rs  schur.rs
src/sum/: mod.rs  pairwise.rs  twosum.rs
