[package]
name = "numerical-leptos-plotly-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.17", default-features = false, features = ["csr"] }
numerical = { path = "../.." }
plotly = "0.14.1"
wasm-bindgen-futures = "0.4.55"
