[package]
name = "numerical-leptos-plotly-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
numerical = { path = "../../.." }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
